# max31856-rs

./: Cargo.toml  README.md  Readme.md
examples/: readme_test.rs  rpi_linux.rs
src/: configuration.rs  lib.rs  registers.rs
tests/: integration.rs
