[package]
name = "max31856"
version = "0.1.0"
authors = ["dheepan <idheepan@gmail.com>"]
repository = "https://github.com/idheepan/max31856-rs"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A platform independent rust driver for Max31856 Precision Thermocouple to Digital Converter"
readme = "README.md"
keywords = ["temperature", "thermocouple", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/idheepan/max31856-rs"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
coveralls = { repository = "idheepan/max31856-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "1.0.0"
nb = "1.0"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"